<resources>
    <string name="app_version">Version 1.0</string>
    <string name="lbl_app_details">© 2016 Vivid Innovation Pvt Ltd</string>
    <string name="action_create_acc">Create Group</string>
    <string name="action_notify_all">MESSAGE ALL</string>
    <string name="action_mail_all">EMAIL ALL</string>
    <string name="action_change_pwd">Change Password</string>
    <string name="action_add_school">Add School</string>
    <string name="action_change_pin">Change Pin</string>
    <string name="action_change_nu">Change Number</string>
    <string name="action_set_wallpaper">Set Wallpaper</string>
    <string name="action_remove_wallpaper">Remove Wallpaper</string>
    <string name="action_all_contacts">Gruppie Contacts</string>
    <string name="action_change_number">Change Mobile Number</string>
    <string name="action_notification">Favourites</string>
    <string name="action_questions">Doubts</string>
    <string name="action_users">All Users</string>
    <string name="action_invite">Invite Friends</string>
    <string name="action_recover_pwd">Recover Password</string>
    <string name="action_update_profile">Update your profile</string>
    <string name="action_myprofile">My Profile</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_update_language">Update language</string>
    <string name="action_login">Login</string>
    <string name="action_forgot_pwd"><u>Forgot your password?</u></string>
    <string name="lbl_startmeeting">Start Meeting</string>
    <string name="action_change_admin">Change Admin</string>
    <string name="action_edit_group">Edit Group</string>
    <string name="action_delete_group">Delete Group</string>
    <string name="action_mute">Mute</string>
    <string name="action_leave">Leave Group</string>
    <string name="action_setting">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_group_setting">Group Settings</string>
    <string name="action_about_group">About School</string>
    <string name="hint_campagian">Campagian short name</string>
    <string name="hint_reg_contact_no">Enter registered number</string>
    <string name="hint_password">Enter the OTP</string>
    <string name="hint_pass">Enter Password</string>
    <string name="hint_pass_conf">Confirm Password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_confirm_password">Confirm new password</string>
    <string name="hint_create_pass">Create Password</string>
    <string name="hint_number">Enter Mobile Number</string>
    <string name="hint_new_number">Enter new mobile</string>
    <string name="hint_confirm_number">Confirm new mobile</string>
    <string name="hint_gpay_paytm">G-Pay / Paytm</string>
    <string name="hint_due_amount">Enter Due Amount</string>
    <string name="hint_pay_amount">Enter Pay Amount</string>
    <string name="hint_pay_date"> Pay Date</string>
    <string name="hint_cheque_number">Enter Cheque Number</string>
    <string name="hint_cheque_date"> Cheque Date</string>
    <string name="hint_bank_name">Enter Bank Name</string>
    <string name="hint_bank_branch">Enter Bank Branch</string>
    <string name="lbl_no_account">Don\'t have a group?</string>
    <string name="lbl_search_issue">Search Issue</string>
    <string name="lbl_search_caste">Search Caste</string>
    <string name="lbl_search_sub_caste">Search Sub Caste</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_walk_des">"Making friends is easy as waving your hand back and forth with ease.</string>
    <string name="hint_name">Enter Name</string>
    <string name="name">name</string>
    <string name="hint_imp_name">Enter Name</string>
    <string name="hint_email">Enter Your Email Id</string>
    <string name="search_contact">Search Contact</string>
    <string name="hint_contact_no">Enter Your Contact Number</string>
    <string name="hint_isAdmin">Admin</string>
    <string name="hint_isPartyTaskForce">Party Task Force</string>
    <string name="hint_isDepartmentTaskForce">Department Task Force</string>
    <string name="hint_isBoothPresident">Booth President</string>
    <string name="hint_isBoothMember">Booth Member</string>
    <string name="hint_enter_message">Enter message</string>
    <string name="hint_view_comments">View Comments</string>
    <string name="hint_lead_name">Enter Friend Name</string>
    <string name="hint_date_format">dd/MM/yyyy</string>
    <string name="hint_date_format_">dd/MM/yyyy\nhh:mm</string>
    <string name="hint_title_text">Title Text</string>
    <string name="hint_fees_type">Fees Type</string>
    <string name="hint_enter_subject_name">Enter Subject Name</string>
    <string name="hint_lead_email">Enter Friend Email Id</string>
    <string name="hint_lead_contact">Enter Friend Contact Number</string>
    <string name="hint_lead_gender">Choose The Gender</string>
    <string name="hint_lead_dob">Date Of Birth</string>
    <string name="hint_lead_roll">Choose The Roll</string>
    <string name="hint_lead_address">Enter Address</string>
    <string name="hint_lead_city">Enter Friend City</string>
    <string name="hint_lead_state">Enter Friend State</string>
    <string name="hint_lead_pincode">Enter Friend Pincode</string>
    <string name="hint_lead_id">Enter Friend Id Number</string>
    <string name="lbl_kannada">Kannada</string>
    <string name="lbl_english">English</string>
    <string name="action_groups">Groups</string>
    <string name="action_add_post">Add Post</string>
    <string name="lbl_lang">Your Preferred Language</string>
    <string name="action_add_lead">Add Friend</string>
    <string name="action_add_invite_lead">Add/Invite Friend</string>
    <string name="action_invite_friend">Invite Friend</string>
    <string name="action_add_contact">Add Important Contact</string>
    <string name="action_view_lead">My friends</string>
    <string name="action_view_autho">Authorized Users</string>
    <string name="action_my_lead">My Leads</string>
    <string name="action_language">Languages</string>
    <string name="action_imp_contacts">Important Contacts</string>
    <string name="action_about_us">About School</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_my_teams">My Teams</string>
    <string name="action_profile">My Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_creategroup">Create New Group</string>
    <string name="please_wait">Please wait</string>
    <string name="lbl_select_img">Select Image</string>
    <string name="lbl_select_audio">Select Audio</string>
    <string name="lbl_select_video">Select Video</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_push">Push</string>
    <string name="lbl_camera">Camera</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="action_save">Save</string>
    <string name="msg_no_internet">no net</string>
    <string name="msg_recover_pwd">We sent password to your registered contact number</string>
    <string name="msg_unable_get_camera_image">Unable to get Camera image. Please try again.</string>
    <string name="msg_no_reply">No reply found.</string>
    <string name="msg_no_comments">No comments found.</string>
    <string name="msg_no_report">No Report found.</string>
    <string name="msg_no_leads">No friends found.</string>
    <string name="msg_leads"></string>
    <string name="msg_no_likes">No likes found.</string>
    <string name="msg_no_users">No users found.</string>
    <string name="msg_no_contaacts">No contacts found.</string>
    <string name="msg_no_fav">No favourite posts found.</string>
    <string name="msg_no_post">No posts found</string>
    <string name="msg_no_que">No doubts found.</string>
    <string name="msg_no_noti">No notifications.</string>
    <string name="msg_no_groups">No Groups found.</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop">Crop</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_new_update_available">New update Available</string>
    <string name="lbl_enter_url">Enter URL</string>
    <string name="lbl_upload_video">Upload Video</string>
    <string name="lbl_enter_youtube_link">Enter Youtube Link</string>
    <string name="lbl_lead_count">Friends Count</string>
    <string name="lbl_phone">Phone Number*</string>
    <string name="lbl_booth_president_phone">PRESIDENT PHONE NUMBER*</string>
    <string name="lbl_phone2">Phone Number</string>
    <string name="lbl_father_name">Father Name</string>
    <string name="lbl_husband_name">Husband Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_email_v2">Email*</string>
    <string name="lbl_other_leads">Other Friends</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_dob">Date of Birth</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_delete_assignment">Delete Assignment</string>
    <string name="lbl_roll">Roll</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_address_v2">Address*</string>
    <string name="lbl_landmark">Landmark</string>
    <string name="lbl_lead_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="lbl_id_num">Id Number</string>
    <string name="lbl_setPin">Set Pin</string>
    <string name="lbl_setFingerPrint">Register Fingerprint</string>
    <string name="lbl_setOldPin">Old Pin</string>
    <string name="lbl_setNewPin">New Pin</string>
    <string name="lbl_conPin">Confirm Pin</string>
    <string name="lbl_valPin">Validate Pin</string>
    <string name="lbl_leads">My Friends</string>
    <string name="lbl_likes">Likes</string>
    <string name="lbl_add_image">Add Image</string>
    <string name="lbl_join">Join</string>
    <string name="lbl_delete_album">Delete Album</string>
    <string name="lbl_delete_video">Delete Video</string>
    <string name="lbl_autho">Authorized Users</string>
    <string name="lbl_all_users">All Users</string>
    <string name="lbl_all_contact">Gruppie Contacts</string>
    <string name="lbl_my_leads">My Leads</string>
    <string name="lbl_my_teams">My Teams</string>
    <string name="hint_address_line_1">Address line 1</string>
    <string name="hint_address_line_2">Address line 2</string>
    <string name="hint_country">Select Country</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_post_title">Post Title</string>
    <string name="lbl_country_">Country</string>
    <string name="lbl_archive_team">Archive Team</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_add_time_table">Add Time Table</string>
    <string name="lbl_add_class">Add Class</string>
    <string name="lbl_add_group">Add Group</string>
    <string name="lbl_attendance_report">Attendance Report</string>
    <string name="lbl_event">Event</string>
    <string name="lbl_holiday">Holiday</string>
    <string name="leave_request">Leave Request</string>
    <string name="lbl_add_students">Add Students</string>
    <string name="hint_search_group">Search</string>
    <string name="lbl_add_booth">Add Booth</string>
    <string name="menu_print_student_list">Print Student List</string>
    <string name="menu_invite_friend">Invite Friend</string>
    <string name="menu_friend_list">Friend List</string>
    <string name="menu_add_friend">Add Friends</string>
    <string name="menu_sync_contact">Sync Contacts</string>
    <string name="menu_zoom_meeting">Zoom Meeting</string>
    <string name="menu_close">Close</string>
    <string name="menu_leave_team">Leave Team</string>
    <string name="menu_edit_team">Edit Team</string>
    <string name="menu_add_team">Add Team</string>
</resources>