<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_class_student"
        android:title="@string/lbl_add_students" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/icon_search"
        android:title="@string/hint_search_group"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_plus_friend"
        android:icon="@drawable/addfriends"
        android:title="@string/menu_add_friend"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/menu_print_student_list"
        android:title="@string/menu_print_student_list"
        android:visible="false" />


</menu>