<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_15dp">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_15dp"
        android:orientation="vertical">

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/address_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="textCapSentences|textNoSuggestions"
            app:leftDrawable="@drawable/ic_location_city"
            app:textHint="@string/hint_address_line_1" />

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/address_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="textCapSentences|textNoSuggestions"
            app:leftDrawable="@drawable/ic_location_city"
            app:textHint="@string/hint_address_line_2" />

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="textCapSentences|textNoSuggestions"
            app:leftDrawable="@drawable/ic_location_city"
            app:textHint="@string/lbl_lead_city" />

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="textCapSentences|textNoSuggestions"
            app:leftDrawable="@drawable/ic_location_city"
            app:textHint="@string/lbl_state" />

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="number"
            app:leftDrawable="@drawable/ic_location_city"
            app:textHint="@string/lbl_pincode" />

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="textCapSentences|textNoSuggestions"
            app:leftDrawable="@drawable/ic_countr"
            app:textHint="@string/lbl_country_" />

        <school.campusconnect.views.DrawableEditText
            android:id="@+id/id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20dp"
            android:inputType="number"
            android:visibility="gone"
            app:leftDrawable="@drawable/ic_keyboard"
            app:textHint="@string/hint_lead_id" />

    </LinearLayout>

    <!--</ScrollView>-->

</RelativeLayout>
