<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">


    <school.campusconnect.views.DrawableEditText
        android:id="@+id/lead_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_15dp"
        android:layout_marginBottom="@dimen/padding_10dp"
        app:leftDrawable="@drawable/ic_person"
        app:textHint="@string/hint_lead_name" />

    <school.campusconnect.views.DrawableEditText
        android:id="@+id/layout_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="@dimen/padding_10dp"
        app:leftDrawable="@drawable/icon_world"
        app:textHint="@string/hint_country" />

    <school.campusconnect.views.DrawableEditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/padding_10dp"
        android:inputType="number"
        app:leftDrawable="@drawable/ic_phone"
        app:textHint="@string/hint_lead_contact" />

    <school.campusconnect.views.DrawableEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        app:leftDrawable="@drawable/ic_email"
        app:textHint="@string/hint_lead_email" />


    <Button
        android:id="@+id/btn_add_lead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/color_green"
        android:text="@string/action_add_lead"
        android:textAllCaps="true"
        android:visibility="gone"
        android:textColor="@color/color_white"
        android:textSize="14sp" />

</LinearLayout>
