<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_15dp"
        android:text="@string/lbl_post_title"
        android:paddingLeft="@dimen/padding_10dp"
        style="@style/LabelNormal"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_5dp"
        android:layout_height="@dimen/login_button_height"
        android:inputType="textCapWords"
        android:imeOptions="actionDone"
        style="@style/RegEditText" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_15dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbtEvent"
            android:text="@string/lbl_event"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtHoliday"
            android:text="@string/lbl_holiday"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/login_button_width"
        style="@style/AddPostButton"
        android:layout_marginTop="@dimen/padding_20dp"
        android:text="@string/lbl_add"
        android:layout_height="@dimen/login_button_height" />
</LinearLayout>